src/objects/Doctor__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Doctor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Last Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doctors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>NetherlandsEmailDomain</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISBLANK(Email__c)),
ISPICKVAL(Country__c, &quot;NL&quot;),
RIGHT(Email__c, 3) &lt;&gt; &quot;.nl&quot;
)</errorConditionFormula>
        <errorDisplayField>Email__c</errorDisplayField>
        <errorMessage>Email must ends with .nl domain</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PolandPhonePrefix</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISBLANK(Phone__c)),
ISPICKVAL(Country__c, &quot;PL&quot;),
LEFT(Phone__c, 3) &lt;&gt; &quot;+48&quot;
)</errorConditionFormula>
        <errorDisplayField>Phone__c</errorDisplayField>
        <errorMessage>Phone number must starts from +48 prefix</errorMessage>
    </validationRules>
</CustomObject>